--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,11 @@ body {
     color: white;
 }
 
+nav {
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
+
 #video-list {
     gap: 10px;
 }
@@ -12,12 +17,30 @@ body {
     background-color: transparent;
 }
 
-.card p {
+.video-item p {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
+.video-item img {
+    position: relative;
+}
+
+.play-btn {
+    display: none;
+    width: fit-content;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    background-color: rgba(0,0,0, .25);
+}
+
 .video-item:hover {
     background-color: rgba(255, 255, 255, .5);
+}
+
+.video-item:hover > .play-btn {
+    display: block;
 }
