--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,10 +8,6 @@ nav {
     margin-bottom: 20px;
 }
 
-.container-fluid {
-    align-items: flex-start;
-}
-
 #video-list {
     gap: 10px;
 }
@@ -21,7 +17,7 @@ nav {
     background-color: transparent;
 }
 
-.video-item p {
+.video-title {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -38,13 +34,13 @@ nav {
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    background-color: rgba(0,0,0, .25);
+    background-color: rgba(0, 0, 0, .25);
 }
 
 .video-item:hover {
     background-color: rgba(255, 255, 255, .5);
 }
 
-.video-item:hover > .play-btn {
+.video-item:hover>.play-btn {
     display: block;
 }
